--- a/requirements_py3.9.18.txt
+++ b/requirements_py3.9.18.txt
@@ -1,45 +1,39 @@
-absl-py==2.0.0
-aeon==0.7.1
-aiohttp==3.9.1
+absl-py==2.1.0
+aiohttp==3.9.3
 aiosignal==1.3.1
-art-python==0.0.5
 async-timeout==4.0.3
 attrs==23.2.0
-cachetools==5.3.2
-captum==0.6.0
-certifi==2023.11.17
+captum==0.7.0
+certifi==2024.2.2
 charset-normalizer==3.3.2
-contourpy==1.1.1
+contourpy==1.2.0
 cycler==0.12.1
 Deprecated==1.2.14
-dill==0.3.7
+dill==0.3.8
 diskcache==5.6.3
 einops==0.7.0
-filelock==3.12.4
-fonttools==4.43.1
+filelock==3.13.3
+fonttools==4.50.0
 frozenlist==1.4.1
-fsspec==2023.9.2
-future==0.18.3
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-grpcio==1.59.3
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-Jinja2==3.1.2
+fsspec==2024.3.1
+future==1.0.0
+grpcio==1.62.1
+idna==3.6
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
-lightning-utilities==0.10.0
-llvmlite==0.41.1
-Markdown==3.5.1
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-more-itertools==10.1.0
+lightning-utilities==0.11.1
+Markdown==3.6
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+more-itertools==10.2.0
 mpmath==1.3.0
-multidict==6.0.4
-networkx==3.2
-numba==0.58.1
-numpy==1.25.2
+multidict==6.0.5
+networkx==3.2.1
+numba==0.59.1
+numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -50,50 +44,42 @@ nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.2.140
+nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-packaging==23.2
-pandas==2.0.3
-patsy==0.5.3
+packaging==24.0
+pandas==2.1.4
 petastorm==0.12.1
-Pillow==10.1.0
-protobuf==4.23.4
-psutil==5.9.7
+pillow==10.2.0
+protobuf==5.26.1
+psutil==5.9.8
 py4j==0.10.9
-pyarrow==14.0.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pyparsing==3.1.1
+pyarrow==15.0.2
+pyparsing==3.1.2
 pyspark==3.0.0
-python-dateutil==2.8.2
-pytorch-lightning==2.1.3
-pytz==2023.3.post1
+python-dateutil==2.9.0.post0
+pytorch-lightning==2.2.1
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-base==0.5.2
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.13.1
+scikit-base==0.7.5
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
 six==1.16.0
-sktime==0.21.0
-statsmodels==0.14.0
+sktime==0.27.1
 sympy==1.12
 tabulate==0.9.0
-tensorboard==2.15.1
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-threadpoolctl==3.2.0
+threadpoolctl==3.4.0
 torch==2.1.0
-torchmetrics==1.2.1
-tqdm==4.66.1
+torchmetrics==1.3.2
+tqdm==4.66.2
 triton==2.1.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.1.0
-Werkzeug==3.0.1
-wrapt==1.15.0
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.2
 yarl==1.9.4
-zipp==3.17.0
+zipp==3.18.1
