--- a/requirements_py3.9.18.txt
+++ b/requirements_py3.9.18.txt
@@ -1,5 +1,5 @@
 absl-py==2.1.0
-aiohttp==3.9.3
+aiohttp==3.9.4
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.2.0
@@ -18,13 +18,14 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 future==1.0.0
 grpcio==1.62.1
-idna==3.6
+idna==3.7
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
-Jinja2==3.1.3
+Jinja2==3.1.4
 joblib==1.3.2
 kiwisolver==1.4.5
 lightning-utilities==0.11.1
+llvmlite==0.42.0
 Markdown==3.6
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -49,19 +50,19 @@ nvidia-nvtx-cu12==12.1.105
 packaging==24.0
 pandas==2.1.4
 petastorm==0.12.1
-pillow==10.2.0
+pillow==10.3.0
 protobuf==5.26.1
 psutil==5.9.8
-py4j==0.10.9
+py4j==0.10.9.5
 pyarrow==15.0.2
 pyparsing==3.1.2
-pyspark==3.0.0
+pyspark==3.2.2
 python-dateutil==2.9.0.post0
 pytorch-lightning==2.2.1
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
-requests==2.31.0
+requests==2.32.0
 scikit-base==0.7.5
 scikit-learn==1.4.1.post1
 scipy==1.12.0
@@ -75,11 +76,12 @@ tensorboard-data-server==0.7.2
 threadpoolctl==3.4.0
 torch==2.1.0
 torchmetrics==1.3.2
-tqdm==4.66.2
+tqdm==4.66.3
 triton==2.1.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
-Werkzeug==3.0.2
+Werkzeug==3.0.3
+wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.1
